# KIT-yatzy

./: CMakeLists.txt  MyApp.cc  MyClass.cc  MyClass.h  MyUnitTests.cc  YatzyApp.cc  YatzyScore.cc  YatzyScore.h  YatzyScoreTests.cc
